--- a/app/css/temas/dark/style-tema.css
+++ b/app/css/temas/dark/style-tema.css
@@ -1,6 +1,6 @@
 .menuSuperior {
     font-family: Roboto, sans-serif;
-    box-shadow:0 2px 6px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 6px 0 rgb(0 0 0 / 25%);
     font-size: 14px;
     font-weight: 400;
     color: #ffffff !important;
