--- a/app/css/ecommers-bootstrap.css
+++ b/app/css/ecommers-bootstrap.css
@@ -1697,7 +1697,7 @@ output {
   color: #000000;
   background-color: #ffffff;
   background-image: none;
-  border: 1px solid #d7e5f7;
+  border: 1px solid #000000;
   border-radius: 2px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -3456,10 +3456,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size: 14px;
   font-weight: normal;
   line-height: 1;
-  color: #33458B;
+  color: #000000;
   text-align: center;
   background-color: #FFFFFF;
-  border: 1px solid #d7e5f7;
+  border: 1px solid #000000;
   border-radius: 2px;
 }
 
@@ -6470,4 +6470,41 @@ ol.progtrckr li.progtrckr-todo:before {
   background: #eaeaea;
   padding-bottom: 7%;
   box-shadow: 1px 0 10px 0 rgb(0 0 0 / 42%);
+}
+.dropbtn {
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  color: #000000;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-left: -120px;
+  margin-top: 10px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {
+  background-color: #FFFFFF;
+  color: #000000;
 }
